--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -52,6 +52,22 @@
 					<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 					<version>2.0.0</version>
 				</dependency>
+				<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-devtools</artifactId>
+				<version>3.1.0</version>
+			</dependency>
+			<!-- <dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-security</artifactId>
+			</dependency> -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-crypto</artifactId>
+			</dependency>
+
+
 
 	</dependencies>
 
