--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -6,4 +6,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate properties for table update
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# application.properties
 
+image.upload.directory=C:/Users/HP/Documents/mamy/springboot/images
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
