--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -12,3 +12,4 @@ image.upload.directory=C:/Users/HP/Documents/mamy/springboot/images
 
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+server.port = 8081
